--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,5 +32,6 @@ html, body {
 
 #grid .cell.playing {
   box-shadow: inset 0 0 10000px 10000px rgba(0,0,0,0.25);
+  color: rgba(255, 255, 255, 0.5);
 }
 
